fix(css): prevent the logo growing too large in vertical layouts

--- a/css/layout.css
+++ b/css/layout.css
@@ -93,6 +93,11 @@ dd, dt {
 	margin-bottom: var(--dd-margin);
 }
 
+svg#logo {
+	max-height: 50px;
+	margin: 0 auto;
+}
+
 @media only screen and (min-width: 768px) {
 	div#content {
 		display: grid;
